change services images

--- a/src/index.html
+++ b/src/index.html
@@ -609,20 +609,28 @@
                 <div class="swiper-service__image-wrapper">
                   <ul class="scroll-snap-slider snap-slider__slider">
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1011/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s01.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1012/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s02.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1013/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s03.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1014/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s04.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
+                    </li>
+                    <li class="scroll-snap-slide snap-slider__slide">
+                      <img alt="" src="images/s05.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
+                    </li>
+                    <li class="scroll-snap-slide snap-slider__slide">
+                      <img alt="" src="images/s06.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                   </ul>
                 </div>
@@ -658,21 +666,32 @@
                 <div class="swiper-service__image-wrapper">
                   <ul class="scroll-snap-slider snap-slider__slider">
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1011/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s02.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1012/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s06.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1013/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s04.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
                     <li class="scroll-snap-slide snap-slider__slide">
-                      <img alt="" src="https://picsum.photos/id/1014/1400/800" class="snap-slider__image" loading="lazy"
-                        width="980" height="552" />
+                      <img alt="" src="images/s01.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
                     </li>
+
+                    <li class="scroll-snap-slide snap-slider__slide">
+                      <img alt="" src="images/s03.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
+                    </li>
+
+                    <li class="scroll-snap-slide snap-slider__slide">
+                      <img alt="" src="images/s05.webp" class="snap-slider__image" loading="lazy" width="980"
+                        height="552" />
+                    </li>
+
                   </ul>
                 </div>
                 <div class="swiper-service__content swiper-service__content--columns">
@@ -839,17 +858,22 @@
               Tbilisi, Грузия
             </p>
             <a href="#" class="text contacts__content-link">+995 595 00 66 06</a>
-            <a href="#" class="text contacts__content-link">panamba@example.com</a>
+            <a href="mailto:panamba.school.volleyball@gmail.com" target="_blank"
+              class="text contacts__content-link">panamba.school.volleyball@gmail.com</a>
           </div>
         </div>
         <div class="contacts__footer" id="contacts-section">
           <h2 class="title contacts__footer-title">Контакты</h2>
           <ul class="contacts__list">
-            <li class="contacts__item contacts__item--facebook"><a href="#"
+            <li class="contacts__item contacts__item--facebook"><a
+                href="https://www.facebook.com/p/Panam-Ba-Volleyball-School-100094278858320/" target="_blank"
                 class="contacts__link contacts__link--facebook">FACEBOOK</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--telegram">TELEGRAM</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--instagram">INSTAGRAM</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--email">E-MAIL</a></li>
+            <li class="contacts__item"><a href="https://t.me/panamba_volleyball_tbilisi" target="_blank"
+                class="contacts__link contacts__link--telegram">TELEGRAM</a></li>
+            <li class="contacts__item"><a href="https://www.instagram.com/panam_ba_volleyball_school/" target="_blank"
+                class="contacts__link contacts__link--instagram">INSTAGRAM</a></li>
+            <li class="contacts__item"><a href="mailto:panamba.school.volleyball@gmail.com" target="_blank"
+                class="contacts__link contacts__link--email">E-MAIL</a></li>
           </ul>
         </div>
       </div>
