updated prod files

--- a/src/english.html
+++ b/src/english.html
@@ -363,40 +363,29 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
+
                   </div>
                   <div class="swiper-train__pagination-wrapper">
                     <div class="swiper-pagination swiper-train__pagination"></div>
@@ -433,37 +422,25 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
