--- a/src/georgian.html
+++ b/src/georgian.html
@@ -362,37 +362,25 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
@@ -431,40 +419,29 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
+
                   </div>
                   <div class="swiper-train__pagination-wrapper">
                     <div class="swiper-pagination swiper-train__pagination"></div>
@@ -522,16 +499,13 @@
           </div>
         </div>
         <p class="camps__message"><span class="camps__message--stroke">
-            115 человек
+            115 - მა ადამიანმა
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 502 103" fill="none" class="camps__svg">
               <path class="camps__path"
                 d="M470.764 11.3054C445.377 10.636 419.721 8.96561 394.349 9.34614C374.541 9.64322 354.791 11.0041 334.941 10.7359C319.617 10.5289 303.922 10.2936 288.592 10.5735C222.063 11.7884 155.528 13.3541 88.9856 15.2388C66.9791 15.8621 46.8278 18.5014 27.8173 28.5193C14.5709 35.4997 10.7063 39.551 5.19365 51.1833C2.87765 56.0703 2.54156 61.9527 2.99484 67.2459C4.17774 81.0593 30.6486 83.9525 41.5465 86.3355C73.1446 93.2446 106.499 96.0807 138.97 96.937C179.056 97.994 219.513 100.452 259.604 100.062C274.475 99.9177 288.905 97.3918 303.618 96.4816C324.068 95.2166 344.499 93.7933 364.938 92.409C382.729 91.2041 399.972 88.0486 417.977 88.2296C429.216 88.3425 440.362 85.8077 451.631 86.1048C458.153 86.2768 467.609 84.3404 473.379 81.6581C479.314 78.8995 489.657 77.4114 494 72.6076C497.74 68.4709 498.918 65.6289 499.062 60.1904C499.114 58.2023 499.167 56.2141 499.219 54.226C499.297 51.282 497.175 50.3918 496.098 47.8963C490.519 34.9643 474.2 29.621 460.006 25.3016C427.088 15.2843 390.984 12.2285 356.565 8.51712C332.941 5.96977 307.298 3.98267 283.982 3.36781"
                 stroke="#FFE600" stroke-width="5" stroke-linecap="round" />
             </svg>
-          </span> провели с нами свой отпуск и
-          доверили
-          свою подготовку
-
+          </span> გვენდო და გაატარეს შვებულება ჩვენთან ერთად
         </p>
 
 
