--- a/src/index.html
+++ b/src/index.html
@@ -364,40 +364,40 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
+                          height="552">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
+                          height="552">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
+                          height="552">
+                      </div>
+                    </div>
+                    <!-- <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                          height="552">
+                      </div>
+                    </div> -->
+                    <!-- <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
                         <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="swiper-train__pagination-wrapper">
                     <div class="swiper-pagination swiper-train__pagination"></div>
@@ -432,42 +432,33 @@
                 <span class="card__label">Пробная тренировка 25 ₾</span>
                 <div class="card__swiper swiper-train">
                   <div class="swiper-wrapper swiper-train__wrapper">
+
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s04.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s05.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s03.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/s06.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
-                    <div class="swiper-slide swiper-train__slide">
-                      <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
-                          height="552">
-                      </div>
-                    </div>
+
+
                   </div>
                   <div class="swiper-train__pagination-wrapper">
                     <div class="swiper-pagination swiper-train__pagination"></div>
