--- a/src/georgian.html
+++ b/src/georgian.html
@@ -222,37 +222,37 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
@@ -292,37 +292,37 @@
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-02.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
                     <div class="swiper-slide swiper-train__slide">
                       <div class="swiper-train__content">
-                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image" loading="lazy" width="639"
+                        <img src="./images/hero-01.webp" alt="" class="swiper-train__image" loading="lazy" width="639"
                           height="552">
                       </div>
                     </div>
@@ -495,7 +495,7 @@
         </div>
         <div class="camps__image-block">
           <div class="camps__image-wrapper">
-            <img src="images/hero-2.jpg" alt="hero" class="camps__image" loading="lazy" width="807" height="538">
+            <img src="images/hero-01.webp" alt="hero" class="camps__image" loading="lazy" width="807" height="538">
           </div>
         </div>
         <p class="camps__message"><span class="camps__message--stroke">
@@ -515,28 +515,28 @@
 
               <div class="swiper-slide camps-swiper__slide">
                 <div class="camps-swiper__image-wrapper">
-                  <img src="images/hero-2.jpg" alt="hero" class="camps-swiper__image" loading="lazy"
+                  <img src="images/hero-01.webp" alt="hero" class="camps-swiper__image" loading="lazy"
                     sizes="(max-width: 760px) 358, 250.59" width="660" height="549.44">
                 </div>
               </div>
 
               <div class="swiper-slide camps-swiper__slide">
                 <div class="camps-swiper__image-wrapper">
-                  <img src="images/hero-1.jpg" alt="hero" class="camps-swiper__image" loading="lazy"
+                  <img src="images/hero-02.webp" alt="hero" class="camps-swiper__image" loading="lazy"
                     sizes="(max-width: 760px) 358, 250.59" width="660" height="549.44">
                 </div>
               </div>
 
               <div class="swiper-slide camps-swiper__slide">
                 <div class="camps-swiper__image-wrapper">
-                  <img src="images/hero-2.jpg" alt="hero" class="camps-swiper__image" loading="lazy"
+                  <img src="images/hero-01.webp" alt="hero" class="camps-swiper__image" loading="lazy"
                     sizes="(max-width: 760px) 358, 250.59" width="660" height="549.44">
                 </div>
               </div>
 
               <div class="swiper-slide camps-swiper__slide">
                 <div class="camps-swiper__image-wrapper">
-                  <img src="images/hero-1.jpg" alt="hero" class="camps-swiper__image" loading="lazy"
+                  <img src="images/hero-02.webp" alt="hero" class="camps-swiper__image" loading="lazy"
                     sizes="(max-width: 760px) 358, 250.59" width="660" height="549.44">
                 </div>
               </div>
@@ -844,15 +844,15 @@
     <section class="section form">
 
       <div class="container">
-        <h2 class="title contacts__footer-title">მოგვწერეთ</h2>
-        <form action="" method="post" class="form__form">
+        <h2 class="title contacts__footer-title form__title">მოგვწერეთ</h2>
+        <form action="/mail.php" method="post" class="form__form">
           <label for="" class="form__label">
-            <input type="text" name="name" class="form__input" placeholder="თქვენი სახელი"> </label>
+            <input type="text" name="name" id="name" class="form__input" placeholder="თქვენი სახელი"> </label>
           <label for="" class=" form__label">
-            <input type="text" name="contacts" class="form__input" placeholder="თქვენი კონტაქტები">
+            <input type="text" name="contact" id="contact" class="form__input" placeholder="თქვენი კონტაქტები">
           </label>
           <label for="" class="form__label">
-            <input type="textarea" name="message" class="form__input" placeholder="თქვენი შეტყობინება">
+            <input type="textarea" name="text" id="text" class="form__input" placeholder="თქვენი შეტყობინება">
           </label>
           <button type="submit" class="btn hero__btn btn__main form__btn">გაგზავნა</button>
         </form>
