--- a/src/georgian.html
+++ b/src/georgian.html
@@ -17,10 +17,10 @@
   <meta property="og:image" content="">
 
   <link rel="stylesheet" href="#">
+  <meta name="google-site-verification" content="f__2zEoeCwVKc5Fvsv3tJouRgR4sjuxEM4s4WBT17RY" />
 </head>
 
 <body>
-
 
   <header class="header">
     <div class="container header__container">
@@ -72,22 +72,24 @@
         <ul class="nav__list">
           <li class="nav__item-left">
             <ul class="nav__list-left">
-              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link">ვარჯიშები</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link">კემპები</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link">სერვისები</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link" data-id="nav">ვარჯიშები</a>
+              </li>
+              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link" data-id="nav">კემპები</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link" data-id="nav">სერვისები</a>
+              </li>
             </ul>
           </li>
 
           <li class="nav__item-right">
             <ul class="nav__list-right">
-              <li class="nav__item"><a href="#trainers" class="nav__link">მწვრთნელები</a></li>
-              <li class="nav__item"><a href="#contacts" class="nav__link">კონტაქტები</a></li>
+              <li class="nav__item"><a href="#trainers" class="nav__link" data-id="nav">მწვრთნელები</a></li>
+              <li class="nav__item"><a href="#contacts-section" class="nav__link" data-id="nav">კონტაქტები</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
                   <span class="nav__link nav__link--visible nav__link--lang">ka</span>
                   <ul class="nav__switcher">
-                    <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
-                    <li class="nav__item"><a href="/" class="nav__link">rus</a></li>
+                    <li class="nav__item"><a href="/english.html" class="nav__link" data-id="nav">en</a></li>
+                    <li class="nav__item"><a href="/" class="nav__link" data-id="nav">ru</a></li>
                   </ul>
                 </div>
               </li>
@@ -97,6 +99,7 @@
       </nav>
     </div>
   </header>
+
 
 
   <main class="main">
@@ -818,9 +821,11 @@
           </div>
           <div class="contacts__content">
             <p class="text">
-              თბილისი, საქართველო
+              3 გიორგი ძოწენიძის ქუჩა, თბილისი, საქართველო<br>
+              PPHP+X5 Tbilisi
             </p>
-            <a href="#" class="text contacts__content-link">+995 595 00 66 06</a>
+            <a href="tel:+995595006606" class="text contacts__content-link">+995 595 00 66 06</a>
+            <a href="tel:+995599024613" class="text contacts__content-link">+995 599 02 46 13</a>
             <a href="mailto:panamba.school.volleyball@gmail.com" target="_blank"
               class="text contacts__content-link">panamba.school.volleyball@gmail.com</a>
           </div>
