--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,15 @@
   <link rel="apple-touch-icon" href="images/favicon.png">
 
   <title>Школа волейбола в Тбилиси | Panam-Ba</title>
-  <meta name="description" content="">
+  <meta name="description"
+    content="Panam Ba - школа по пляжному и классическому волейболу в Тбилиси и Батуми. Обучаем детей и взрослых любого уровня. Проводим турниры, кемпы, корпоративные игры">
 
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://panamba.ge">
+  <meta property="og:image" content="https://panamba.ge/images/s04.webp">
 
   <link rel="stylesheet" href="#">
+  <link rel="canonical" href="https://panamba.ge">
   <meta name="google-site-verification" content="f__2zEoeCwVKc5Fvsv3tJouRgR4sjuxEM4s4WBT17RY" />
 </head>
 
