add correct hreflang tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 
@@ -19,6 +19,11 @@
 
   <link rel="stylesheet" href="#">
   <link rel="canonical" href="https://panamba.ge">
+  <link href="https://panamba.ge/georgian.html" rel="alternate" hreflang="ka">
+  <link href="https://panamba.ge/english.html" rel="alternate" hreflang="en">
+  <link href="https://panamba.ge" rel="alternate" hreflang="x-default">
+  <link href="https://panamba.ge" rel="alternate" hreflang="ru">
+
   <meta name="google-site-verification" content="f__2zEoeCwVKc5Fvsv3tJouRgR4sjuxEM4s4WBT17RY" />
   <meta name="yandex-verification" content="6471a7cbc3e2638e" />
   <!-- Google Tag Manager -->
