--- a/src/english.html
+++ b/src/english.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="images/favicon.png">
 
-  <title>Школа волейбола в Тбилиси | Panam-Ba</title>
+  <title>Volleyball in Tbilisi | Panam-Ba</title>
   <meta name="description"
     content="Panam Ba - school for beach and indoor volleyball in Tbilisi and Batumi. We provide training for children and adults of all levels. Additionally, we organize tournaments, camps, and corporate events.">
 
@@ -19,6 +19,10 @@
 
   <link rel="stylesheet" href="#">
   <link rel="canonical" href="https://panamba.ge/english.html">
+  <link href="https://panamba.ge/georgian.html" rel="alternate" hreflang="ka">
+  <link href="https://panamba.ge/english.html" rel="alternate" hreflang="en">
+  <link href="https://panamba.ge" rel="alternate" hreflang="x-default">
+  <link href="https://panamba.ge" rel="alternate" hreflang="ru">
   <meta name="google-site-verification" content="f__2zEoeCwVKc5Fvsv3tJouRgR4sjuxEM4s4WBT17RY" />
   <meta name="yandex-verification" content="6471a7cbc3e2638e" />
   <!-- Google Tag Manager -->
