add meta locale

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://panamba.ge">
   <meta property="og:image" content="https://panamba.ge/images/s04.webp">
+  <meta content="ru_RU" property="og:locale">
+  <meta content="ka_KA" property="og:locale:alternate">
+  <meta content="en_EN" property="og:locale:alternate">
+  <meta content="Panam-Ba" property="og:site_name">
 
   <link rel="stylesheet" href="#">
   <link rel="canonical" href="https://panamba.ge">
