add schema markup

--- a/src/index.html
+++ b/src/index.html
@@ -952,6 +952,47 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FJQFB9Q" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsActivityLocation",
+      "name": "Volleyball school Panam-Ba",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "3 Giorgi Dzotsenidze",
+        "addressLocality": "Tbilisi",
+        "addressRegion": "",
+        "postalCode": "0186"
+      },
+      "image": "https://panamba.ge/images/s04.webp",
+      "email": "panamba.school.volleyball@gmail.com",
+      "telePhone": "+995 595 00 66 06",
+      "url": "https://panamba.ge/",
+      "paymentAccepted": [ "cash", "credit card" ],
+      "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 09:00-22:00",
+      "openingHoursSpecification": [ {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "09:00",
+        "closes": "22:00"
+      } ],
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "41.73010425341923",
+        "longitude": "44.73550961534162"
+      },
+      "priceRange":"$"
+
+    }
+    </script>
 
 </body>
 
