add map coord to separate paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -870,6 +870,8 @@
           <div class="contacts__content">
             <p class="text">
               3-й микрорайон Нуцубидзе, 2-й квартал, Тбилиси, Грузия<br>
+            </p>
+            <p class="text">
               PPHP+X5 Tbilisi
             </p>
             <a href="tel:+995595006606" class="text contacts__content-link">+995 595 00 66 06</a>
