--- a/src/english.html
+++ b/src/english.html
@@ -839,6 +839,8 @@
           <div class="contacts__content">
             <p class="text">
               3 გიორგი ძოწენიძის ქუჩა, Tbilisi, Georgia<br>
+            </p>
+            <p class="text">
               PPHP+X5 Tbilisi
             </p>
             <a href="tel:+995595006606" class="text contacts__content-link">+995 595 00 66 06</a>
