--- a/src/georgian.html
+++ b/src/georgian.html
@@ -843,6 +843,8 @@
           <div class="contacts__content">
             <p class="text">
               3 გიორგი ძოწენიძის ქუჩა, თბილისი, საქართველო<br>
+            </p>
+            <p class="text">
               PPHP+X5 Tbilisi
             </p>
             <a href="tel:+995595006606" class="text contacts__content-link">+995 595 00 66 06</a>
